Fix alignment and added correct answer on results page

--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@
 .quiz-start {
     position: fixed;
     top: 45%;
-    width: 100%;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -80,11 +80,12 @@ h1 {
 .game-bar {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin: 10px;
 }
 
 .question-bar {
-    width: 100%;
+    width: 100vw;
     height: 12px;
     background-color: gray;
     overflow: hidden;
@@ -106,8 +107,8 @@ h1 {
 }
 
 #timer {
-    width: 90px;
-    height: 90px;
+    width: 8vw;
+    height: 8vw;
     border-radius: 50%;
     background-color: black;
     color: white;
@@ -127,7 +128,7 @@ h1 {
 }
 
 .image-container img {
-    width: 50%;
+    width: 40%;
 }
 
 #answer-count {
@@ -155,7 +156,7 @@ h1 {
     column-gap: 10px;
     row-gap: 10px;
     width: 100vw;
-    padding: 20px;
+    padding: 35px 20px;
 }
 
 .answer-container > button {
@@ -177,11 +178,23 @@ h1 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 20px;
 }
 
 #bar-chart {
     width: 50vw !important;
     height: 50vh !important;
+}
+
+.correct {
+    background-color: black !important;
+    color: white !important;
+    pointer-events: none;
+}
+
+.wrong {
+    opacity: 0.5;
+    pointer-events: none;
 }
 
 .bottom-bar {
